--- a/TVYouTube/TVYouTube/Resources/Localized/en.lproj/Localize.strings
+++ b/TVYouTube/TVYouTube/Resources/Localized/en.lproj/Localize.strings
@@ -1,1 +1,11 @@
-"general.offlinemode" = "Offline mode";
+// MARK: - Main Module
+"main.title" = "Home Screen";
+"main.section.one" = "Section One";
+"main.section.two" = "Section Two";
+"main.section.three" = "Section Three";
+"main.section.four" = "Section Four";
+"main.section.five" = "Section Five";
+
+// MARK: - Mock Text
+"mock.title" = "Film";
+"mock.info" = "info about film, info about film info about film, info about filminfo about film, info about film";
