add video player

--- a/TVYouTube/TVYouTube/Resources/Localized/en.lproj/Localize.strings
+++ b/TVYouTube/TVYouTube/Resources/Localized/en.lproj/Localize.strings
@@ -8,6 +8,7 @@
 
 // MARK: - Detail Module
 "detail.title" = "Detail Screen";
+"detail.play" = "Play";
 
 // MARK: - Mock Text
 "mock.title" = "Film";
